# py123d

./: README.md  pyproject.toml
.github/workflows/: pytest.yaml
docs/: conf.py  contributing.md
docs/api/datatypes/detections/: 01_box_detections.rst
docs/api/datatypes/map_objects/: 00_base_map_objects.rst  11_speed_bump.rst  index.rst
docs/api/datatypes/sensors/: 01_camera.rst  02_pinhole_camera.rst  03_fisheye_mei_camera.rst  04_lidar.rst  index.rst
docs/api/datatypes/vehicle_state/: 03_ego_metadata.rst  03_vehicle_parameters.rst
docs/datasets/: av2.rst  carla.rst  index.rst  kitti-360.rst  ncore.rst  nuplan.rst  nuscenes.rst  pandaset.rst  physical-ai-av.rst  template.rst  wod_motion.rst  wod_perception.rst
docs/notes/: conventions.rst
scripts/: benchmark_random_access.py
src/py123d/api/: __init__.py
src/py123d/api/log_writer/: __init__.py  arrow_log_writer.py
src/py123d/api/map/: __init__.py  abstract_map_writer.py  arrow_map_api.py  map_api.py
src/py123d/api/map_writer/: arrow_map_writer.py
src/py123d/api/scene/: abstract_log_writer.py  scene_api.py  scene_builder.py  scene_filter.py  scene_metadata.py
src/py123d/api/utils/: arrow_helper.py  arrow_metadata_utils.py  arrow_schema.py
src/py123d/common/execution/: __init__.py
src/py123d/common/utils/: enums.py
src/py123d/conversion/: abstract_dataset_converter.py  abstract_dataset_parser.py  dataset_converter_config.py
src/py123d/conversion/registry/: __init__.py  box_detection_label_registry.py
src/py123d/datatypes/: __init__.py
src/py123d/datatypes/detections/: __init__.py  box_detection_label.py  box_detection_label_metadata.py  box_detections.py  traffic_light_detections.py
src/py123d/datatypes/map_objects/: __init__.py  map_layer_types.py  map_objects.py
src/py123d/datatypes/metadata/: __init__.py  coordinate_frames.py  log_metadata.py  map_metadata.py  sensor_metadata.py
src/py123d/datatypes/modalities/: __init__.py  base_modality.py
src/py123d/datatypes/sensors/: __init__.py  base_camera.py  fisheye_mei_camera.py  ftheta_camera.py  lidar.py  pinhole_camera.py
src/py123d/datatypes/vehicle_state/: __init__.py  ego_metadata.py  ego_state.py
src/py123d/geometry/: __init__.py  polyline.py
src/py123d/geometry/utils/: rotation_utils.py
src/py123d/parser/: base_dataset_parser.py  base_downloader.py  dataset_converter_config.py  registry.py
src/py123d/parser/av2/: av2_download.py  av2_map_parser.py  av2_sensor_parser.py
src/py123d/parser/kitti360/: kitti360_map_parser.py  kitti360_parser.py
src/py123d/parser/ncore/: ncore_download.py  ncore_parser.py
src/py123d/parser/nuplan/: nuplan_download.py  nuplan_map_parser.py  nuplan_parser.py  nuplan_sensor_io_standalone.py
src/py123d/parser/nuscenes/: nuscenes_download.py  nuscenes_interpolated_parser.py  nuscenes_map_parser.py  nuscenes_map_paser.py  nuscenes_parser.py
src/py123d/parser/opendrive/: opendrive_map_parser.py  opendrive_parser.py
src/py123d/parser/pandaset/: pandaset_download.py  pandaset_parser.py  pandaset_sensor_io.py
src/py123d/parser/physical_ai_av/: physical_ai_av_parser.py  physical_ai_av_sensor_io.py
src/py123d/parser/wod/: wod_download.py  wod_map_parser.py  wod_motion_parser.py  wod_perception_parser.py
src/py123d/script/: download_ncore.py  run_bokeh.py  run_conversion.py  run_download.py  run_parser_conversion.py  run_viser.py
tests/unit/parser/: test_parser_imports.py
tutorials/: 01_scene_tutorial.ipynb  02_map_tutorial.ipynb  03_visualizations_tutorial.ipynb  03_visualizations_tutorial_test.ipynb  05_async_conversion_test.ipynb  05_timestamps.ipynb  07_rolling_shutter_direct_arrow.ipynb  test_velocity_alignment.ipynb
(+184 files in other folders)
